appId: com.avelts.lain
tags:
  - smoke
  - p0
---
- launchApp:
    clearState: true
- tapOn:
    id: scene-tv-play-button
- extendedWaitUntil:
    visible:
      id: scene-debug-mode-awp
    timeout: 15000
- tapOn:
    point: 50%,70%
- extendedWaitUntil:
    visible:
      id: scene-debug-audio-muted
    timeout: 10000
