appId: com.avelts.lain
tags:
  - smoke
  - p0
---
- launchApp:
    clearState: true
- assertVisible:
    id: scene-feed-screen
- assertVisible:
    id: scene-active-mode-awp
- assertVisible:
    id: scene-tv-play-button
- tapOn:
    id: scene-tv-next-button
- assertVisible:
    id: scene-active-mode-slasher
