appId: com.avelts.lain
tags:
  - smoke
  - p0
---
- launchApp:
    clearState: true
- assertVisible:
    id: scene-active-mode-awp
- tapOn:
    id: scene-tv-next-button
- assertVisible:
    id: scene-active-mode-slasher
- tapOn:
    id: scene-tv-prev-button
- assertVisible:
    id: scene-active-mode-awp
