appId: com.avelts.lain
tags:
  - smoke
  - p0
---
- launchApp:
    clearState: true
- tapOn:
    id: scene-tv-next-button
- assertVisible:
    id: scene-active-mode-slasher
- tapOn:
    id: scene-tv-play-button
- assertVisible:
    id: game-screen
- extendedWaitUntil:
    visible:
      id: scene-debug-mode-slasher
    timeout: 15000
- longPressOn:
    point: 50%,70%
- extendedWaitUntil:
    visible:
      id: scene-debug-action-slash-hit
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: scene-debug-target-dead
    timeout: 10000
